--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "react"
   ],
   "rules": {
+    "react/no-array-index-key": 0,
     "linebreak-style": 0,
     "react/jsx-filename-extension": [
       1,
