--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
-    "animate.css": "^4.1.1",
-    "classnames": "^2.3.1"
+    "animate.css": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,10 +39,6 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.25.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "autoprefixer": "^10.4.2",
-    "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15"
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
