--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "react"
   ],
   "rules": {
+    "no-template-curly-in-string": "off",
     "no-unused-vars": 0,
     "no-param-reassign": 0,
     "no-console": "off",
